--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,10 @@
   "name": "Live Search",
   "version": "0.0.1",
   "dependencies": {
-    "semantic": "0.19.3" 
+    "semantic": "0.19.3",
+    "angular": "~1.3.1",
+    "string": "~2.2.0",
+    "lodash": "~2.4.1",
+    "angular-translate": "~2.4.2"
   }
 }
