--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "author": "Bruno Menezes",
   "license": "MIT",
   "dependencies": {
+    "bower": "^1.3.9",
     "express": "~4.10.1",
     "jade": "~1.7.0",
     "q": "~1.0.1",
     "elasticsearch": "~2.4.3",
     "string": "~2.2.0",
     "lodash": "~2.4.1",
-    "body-parser": "~1.9.2"
+    "body-parser": "~1.9.2",
+    "request": "~2.47.0"
   }
 }
